Secure wp-config template without API key exposure
- Updated wp-config template with placeholder for API key
- Enhanced setup instructions for secure implementation
- Added security patterns to .gitignore
- Created local API key reference file (not tracked)
- Follows GitHub security best practices

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ wp-config-sample.php
 wp-content/uploads/
 wp-content/cache/
 
+# Security - API keys and sensitive files
+API-KEY-REFERENCE.txt
+*.key
+*.secret
+
 # Plugin development files
 *.log
 *.tmp
